--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,9 @@
 rootProject.name = 'AwesomeProject'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 include ':react-native-gesture-handler'
 project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
 
+include ':react-native-tesseract-ocr'
+project(':react-native-tesseract-ocr').projectDir = new File(rootProject.projectDir,  '../node_modules/react-native-tesseract-ocr/android')
 include ':app'
