--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "react": "16.8.3",
     "react-native": "^0.59.6",
     "react-native-gesture-handler": "^1.2.0",
-    "react-navigation": "^3.9.1"
+    "react-native-image-picker": "^0.28.1",
+    "react-native-imagepicker": "^2.0.0",
+    "react-native-paper": "^2.15.2",
+    "react-native-tesseract-ocr": "^1.0.10",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "tesseract.js": "^1.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
